Add deployment fixes and update .gitignore
- Fix backend Dockerfile to install all dependencies for build
- Fix frontend Dockerfile to remove duplicate nginx user creation
- Fix TypeScript errors in frontend (unused imports, missing type definitions)
- Add vite-env.d.ts for proper Vite environment variable types
- Update .gitignore to exclude OpenTofu/Terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ drizzle/
 # Misc
 .cache/
 .temp/
+
+# OpenTofu/Terraform
+.terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+*.tfstate
+*.tfstate.backup
+*.tfvars
+!*.tfvars.example
+!terraform.tfvars.cost-optimized
