--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,9 @@ jobs:
           cd frontend
           # Create production environment file
           echo "VITE_GRAPHQL_URL=https://api.cryptoquantlab.com/graphql" > .env.production
+          echo "VITE_COGNITO_USER_POOL_ID=us-east-1_dBsPJ5K4G" >> .env.production
+          echo "VITE_COGNITO_CLIENT_ID=687v6ninm2ccb3juaqc6u8gqka" >> .env.production
+          echo "VITE_AWS_REGION=us-east-1" >> .env.production
           docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_FRONTEND_REPO:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_FRONTEND_REPO:latest .
           docker push $ECR_REGISTRY/$ECR_FRONTEND_REPO:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_FRONTEND_REPO:latest
