--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,30 +10,32 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.9",
+    "@aws-amplify/ui-react": "^6.13.1",
+    "@reduxjs/toolkit": "^2.0.1",
+    "aws-amplify": "^6.15.8",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
-    "@reduxjs/toolkit": "^2.0.1",
     "react-redux": "^9.1.0",
-    "@apollo/client": "^3.8.9",
-    "graphql": "^16.8.1",
-    "recharts": "^2.10.4",
-    "date-fns": "^3.2.0",
-    "clsx": "^2.1.0"
+    "react-router-dom": "^6.21.3",
+    "recharts": "^2.10.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.16",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11"
   }
 }
