--- a/backend/package.json
+++ b/backend/package.json
@@ -15,22 +15,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.936.0",
+    "@aws-sdk/lib-dynamodb": "^3.936.0",
+    "axios": "^1.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
-    "drizzle-orm": "^0.29.3",
-    "postgres": "^3.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.5",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
-    "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
+    "drizzle-kit": "^0.20.10",
     "tsx": "^4.7.0",
-    "drizzle-kit": "^0.20.10"
+    "typescript": "^5.3.3"
   }
 }
