--- a/infrastructure/kubernetes/frontend-deployment.yaml
+++ b/infrastructure/kubernetes/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/crypto-analytics-frontend:latest
+        image: 010151257830.dkr.ecr.us-east-1.amazonaws.com/crypto-analytics-frontend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
