--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@apollo/client": "^3.8.9",
     "@aws-amplify/ui-react": "^6.13.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.0.1",
     "aws-amplify": "^6.15.8",
     "clsx": "^2.1.0",
