--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,6 @@
 VITE_GRAPHQL_URL=http://localhost:4000/graphql
 # For production, use: https://api.cryptoquantlab.com/graphql
+
+# PostHog Analytics
+VITE_POSTHOG_API_KEY=your_posthog_api_key_here
+VITE_POSTHOG_HOST=https://us.i.posthog.com
