--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
     "graphql": "^16.8.1",
+    "posthog-js": "^1.302.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
