--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "posthog-js": "^1.302.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.10.4"
