--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,16 @@ PORT=4000
 DATABASE_URL=postgresql://user:password@localhost:5432/crypto_analytics
 NODE_ENV=development
 COINGECKO_API_KEY=
+
+# Security - API Key (Required for all API requests)
+API_KEY=your-secret-api-key-here
+
+# Security - Cognito JWT Verification
+COGNITO_USER_POOL_ID=us-east-1_xxxxxxxxx
+AWS_REGION=us-east-1
+
+# Security - CORS Allowed Origins (comma-separated)
+ALLOWED_ORIGINS=http://localhost:3000,https://cryptoquantlab.com
+
+# AWS DynamoDB
+DYNAMODB_PREFERENCES_TABLE=crypto-analytics-production-user-preferences
