--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,11 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
+    "jsonwebtoken": "^9.0.3",
+    "jwks-rsa": "^3.2.0",
     "node-cache": "^5.1.2",
     "postgres": "^3.4.3"
   },
