--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,14 @@
 VITE_GRAPHQL_URL=http://localhost:4000/graphql
 # For production, use: https://api.cryptoquantlab.com/graphql
 
+# API Security - Backend API Key (Required)
+VITE_API_KEY=your-secret-api-key-here
+
+# AWS Cognito (Public IDs - not secrets)
+VITE_COGNITO_USER_POOL_ID=us-east-1_xxxxxxxxx
+VITE_COGNITO_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxx
+VITE_AWS_REGION=us-east-1
+
 # PostHog Analytics
 VITE_POSTHOG_API_KEY=your_posthog_api_key_here
 VITE_POSTHOG_HOST=https://us.i.posthog.com
