--- a/infrastructure/kubernetes/backend-deployment.yaml
+++ b/infrastructure/kubernetes/backend-deployment.yaml
@@ -8,6 +8,12 @@ data:
   NODE_ENV: "production"
   AWS_REGION: "us-east-1"
   DYNAMODB_PREFERENCES_TABLE: "crypto-analytics-production-user-preferences"
+  ALLOWED_ORIGINS: "https://cryptoquantlab.com"
+  COGNITO_USER_POOL_ID: "us-east-1_dBsPJ5K4G"
+---
+# Secret for API_KEY is automatically created by GitHub Actions
+# during deployment from GitHub Secret: VITE_API_KEY
+# No manual kubectl commands needed!
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -57,6 +63,21 @@ spec:
             configMapKeyRef:
               name: backend-config
               key: DYNAMODB_PREFERENCES_TABLE
+        - name: ALLOWED_ORIGINS
+          valueFrom:
+            configMapKeyRef:
+              name: backend-config
+              key: ALLOWED_ORIGINS
+        - name: COGNITO_USER_POOL_ID
+          valueFrom:
+            configMapKeyRef:
+              name: backend-config
+              key: COGNITO_USER_POOL_ID
+        - name: API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: backend-secrets
+              key: API_KEY
         resources:
           requests:
             memory: "256Mi"
