--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.936.0",
+    "@aws-sdk/client-ses": "^3.958.0",
     "@aws-sdk/lib-dynamodb": "^3.936.0",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
