added moving average notification section.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ ALLOWED_ORIGINS=http://localhost:3000,https://cryptoquantlab.com
 
 # AWS DynamoDB
 DYNAMODB_PREFERENCES_TABLE=crypto-analytics-production-user-preferences
+DYNAMODB_NOTIFICATION_RULES_TABLE=crypto-analytics-local-notification-rules
+DYNAMODB_NOTIFICATIONS_TABLE=crypto-analytics-local-notifications
+DYNAMODB_EMAIL_RATE_LIMIT_TABLE=crypto-analytics-local-email-rate-limits
