--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
+    "db:setup-notifications": "tsx scripts/setup-local-tables.ts",
+    "db:test": "tsx scripts/test-dynamodb.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -33,12 +35,16 @@
     "jsonwebtoken": "^9.0.3",
     "jwks-rsa": "^3.2.0",
     "node-cache": "^5.1.2",
-    "postgres": "^3.4.3"
+    "node-cron": "^4.2.1",
+    "postgres": "^3.4.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
+    "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
     "drizzle-kit": "^0.20.10",
